@@ -1256,7 +1256,7 @@ void CSceneManager::drawAll()
 		driver->setTransform ( video::ETS_TEXTURE_3, core::IdentityMatrix );
 	}
 
-	driver->setDisableZWriteOnTransparent(Parameters.getAttributeAsBool( DISABLE_ZWRITE_ON_TRANSPARENT) );
+	driver->setAllowZWriteOnTransparent(Parameters.getAttributeAsBool( ALLOW_ZWRITE_ON_TRANSPARENT) );
 
 	// do animations and other stuff.
 	OnAnimate(os::Timer::getTime());
